# SemaCon

./: WRITEUP.md
c-homework/: .db.c.swp  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  rules.ninja
c-homework/Testing/Temporary/: CTestCostData.txt
c-homework/main/: CMakeLists.txt  cmake_install.cmake  main  main.c
c-homework/src/: CMakeLists.txt  cmake_install.cmake  db.c  db.h
c-homework/test/: CTestTestfile.cmake  cmake_install.cmake
c-homework/test/suite_1/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  new1.txt  suite_1.c  suite_1_app  test_db.c
